--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,7 @@ jobs:
           path: test/
       - store_artifacts:
           path: test-results
+workflows:
+  build:
+    jobs:
+      - run_tests
